adding global styles

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,16 @@
 @import "reset.css";
+
+
+body {
+   font-weight: 400;
+   color: #0A0A0A;
+   font-family: 'Inter', sans-serif; 
+   line-height: 1.4;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0px 15px;
+}
+
