--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
     color: #0A0A0A;
     font-family: 'Inter', sans-serif; 
     line-height: 1.4;
+    overflow-x: hidden;
  }
  
  .container {
