--- a/css/form.css
+++ b/css/form.css
@@ -66,6 +66,12 @@
     padding: 16px 80px;
     border-radius: 30px;
     margin-left: 70px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.form__button:hover {
+    background-color: #ccbbbb;
 }
 
 .form__button span {
