--- a/css/footer.css
+++ b/css/footer.css
@@ -13,6 +13,11 @@
 .footer__text {
     font-size: 14px;
     line-height: 1.3;
+    transition: all 0.5s ease;
+}
+
+.footer__text:hover {
+    text-decoration: underline;
 }
 
 .footer__logo {
@@ -23,4 +28,9 @@
 
 .footer__phone {
     font-size: 24px;
+    transition: all 0.5s ease;
+}
+
+.footer__phone:hover {
+    text-decoration: underline;
 }
