--- a/css/range.css
+++ b/css/range.css
@@ -24,6 +24,12 @@
     background-color: #490E84;
     padding: 22px 118px;
     border-radius: 30px;
+    transition: all 0.5s ease;
+    cursor: pointer;
+}
+
+.range__button:hover {
+    background-color: #7530ba;
 }
 
 .range__link {
