--- a/css/header.css
+++ b/css/header.css
@@ -42,3 +42,104 @@
 .header__phone:hover {
     text-decoration: underline;
 }
+
+@media (max-width: 1200px) {
+    .header__list {
+        margin-right: 180px;
+        column-gap: 20px;
+    }
+
+    .header__logo {
+        margin-right: 300px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .header__list {
+        column-gap: 15px;
+        margin-right: 150px;
+    }
+
+     .header__logo {
+        margin-right: 255px; 
+    }
+}
+
+@media (max-width: 1000px) {
+    .header__list {
+        column-gap: 13px;
+        margin-right: 160px;
+    }
+
+    .header__link {
+        font-size: 16px;
+    }
+
+     .header__logo {
+        margin-right: 235px; 
+    }
+
+    .header__logo img {
+        width: 30px;
+        height: 40px;
+    }
+
+    .header__phone {
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 820px) {
+    .header__list {
+        margin-right: 120px;
+    }
+
+     .header__logo {
+        margin-right: 180px; 
+    }
+}
+
+@media (max-width: 730px) {
+    .header__inner {
+        flex-direction: column;
+        row-gap: 20px;
+    }
+
+     .header__list {
+        margin-right: 0px;
+    }
+
+    .header__link {
+        font-size: 30px;
+    }
+
+    .header__logo {
+        margin-right: 0px; 
+        width: 100px;
+        height: 100px;
+        order: -1;
+    }
+
+    .header__logo img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .header__phone {
+        font-size: 30px;
+    }
+}
+
+
+@media (max-width: 380px) {
+    .header__list {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+     .header__phone {
+        font-size: 25px;
+    }
+
+
+}
