--- a/css/colors.css
+++ b/css/colors.css
@@ -2,20 +2,16 @@
     margin-bottom: 150px;
 }
 
-
 .colors__title {
     margin-bottom: 49px;
 }
-
 
 .colors__items {
     display: flex;
     column-gap: 80px;
 }
 
-.colors__item {
-    
-}
+.colors__item {}
 
 .colors__img {
     margin-bottom: 20px;
@@ -33,4 +29,23 @@
     text-align: center;
     font-size: 14px;
     line-height: 1.3;
+}
+
+@media (max-width: 1200px){
+    .colors__items {
+        column-gap: 40px;
+    }
+}
+
+@media (max-width: 1100px){
+    .colors__items {
+        column-gap: 10px;
+    }
+}
+
+@media (max-width: 1020px){
+    .colors__items {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
 }
