--- a/css/reset.css
+++ b/css/reset.css
@@ -28,9 +28,11 @@ html, body {
     font-size: 100%;
     line-height: 1;
     font-size: 14px;
+    overflow-x: hidden;
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    
 }
 
 input, button, textarea {
